--- a/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
@@ -79,8 +79,7 @@
                                         <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox"
                                                [(ngModel)]="bug.reproducible" [ngModelOptions]="{standalone: true}">
                                         <label for="checkbox1"></label>
-                                        <textarea class="form-control" rows="1"
-                                              [(ngModel)]="bug.description" [ngModelOptions]="{standalone: true}" placeholder="Details"></textarea>
+                                        <textarea class="form-control" rows="1" placeholder="Details"></textarea>
                                     </div>
                                 </div>
                             </div>
