--- a/bughound_webapp/src/app/programs/programs-list/programs-list.component.html
+++ b/bughound_webapp/src/app/programs/programs-list/programs-list.component.html
@@ -3,8 +3,22 @@
     <div class="row toolbar">
         <div class="col-md-12">
             <div class="card">
-                <div class="content">
-                    <button class="btn btn-info btn-fill" (click)="navigateToUrl('add')">Add a new program</button>
+                <div class="content row">
+                    <div class="filters col-md-8">
+                    </div>
+                    <div class="actions-container col-md-4">
+                        <div class="dropdown">
+                            <button class="btn btn-filled btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+                                Export
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" (click)="exportResults('CSV')">CSV</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" (click)="exportResults('XML')">XML</a></li>
+                                </ul>
+                            </button>
+                        </div>
+                        <button class="btn btn-info btn-fill" (click)="navigateToUrl('add')">Add a new program</button>
+                    </div>
                 </div>
             </div>
         </div>
